--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
@@ -3,7 +3,7 @@
   <div class="sixteen wide column">
 
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>ค้นหาการติดตามผลการตรวจสอบของโครงการ</span>
+      <span>ค้นหาการติดตามผลการตรวจสอบของหน่วยรับตรวจ</span>
     </div>
 
     <div id="followUpDepartmentPage" class="ui attached segment">
@@ -77,7 +77,7 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-            <button class="ui mini primary button" (click)="addData()">
+            <button class="ui mini green button" (click)="addData()">
               <i class="add icon"></i>
               เพิ่มข้อมูลติดตาม
             </button>
@@ -104,7 +104,12 @@
             <th colspan="1" style="text-align: center !important;">วันครบกำหนดครั้งที่ 2</th>
             <th colspan="2" style="text-align: center !important;">หน่วยรับตรวจแจ้งผลการดำเนินงานครั้งที่ 2</th>
             <th colspan="2" style="text-align: center !important;">รายงานการติดตามครั้งที่ 2</th>
+            <th colspan="2" style="text-align: center !important;">แจ้งติดตามหน่วยรับตรวจครั้งที่ 3</th>
+            <th colspan="1" style="text-align: center !important;">วันครบกำหนดครั้งที่ 3</th>
+            <th colspan="2" style="text-align: center !important;">หน่วยรับตรวจแจ้งผลการดำเนินงานครั้งที่ 3</th>
+            <th colspan="2" style="text-align: center !important;">รายงานการติดตามครั้งที่ 3</th>
             <th rowspan="2" style="text-align: center !important;">สถานะการติดตาม</th>
+            <th rowspan="2" style="text-align: center !important;">หมายเหตุ</th>
             <th rowspan="2" style="text-align: center !important;">จัดการ</th>
           </tr>
           <tr>
@@ -125,18 +130,25 @@
             <th style="text-align: center !important;">วันที่</th>
             <th style="text-align: center !important;">เลขหนังสือ</th>
             <th style="text-align: center !important;">วันที่</th>
+            <th style="text-align: center !important;">เลขหนังสือ</th>
+            <th style="text-align: center !important;">วันที่</th>
+            <th style="text-align: center !important;">60 วัน</th>
+            <th style="text-align: center !important;">เลขหนังสือ</th>
+            <th style="text-align: center !important;">วันที่</th>
+            <th style="text-align: center !important;">เลขหนังสือ</th>
+            <th style="text-align: center !important;">วันที่</th>
           </tr>
         </thead>
       </table>
       <br/>
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="exportFollowUpDepartment()">
+          <button class="ui mini yellow button" (click)="exportFollowUpDepartment()">
             <i class="print icon"></i>
             Export
           </button>
-          <button class="ui mini primary button" (click)="deleteData()">
-            <i class="trash icon"></i>
+          <button class="ui mini red button" (click)="deleteData()">
+            <i class="trash alternate icon"></i>
             ลบ
           </button>
         </div>
