edit mockup folder int06

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-1/int01-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-1/int01-3-1.component.html
@@ -1,9 +1,8 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ตรวจสอบใบอนุญาตสุรา ยาสูบ ไพ่</h2>
-
+  
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span> ตรวจสอบใบอนุญาตสุรา ยาสูบ ไพ่</span>
+        <span>ข้อมูลกระดาษทำการค่าปรับเปรียบเทียบคดี</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
