--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9.component.html
@@ -11,9 +11,11 @@
             <label class="custom-label-w-25">รายการโอนเงิน</label>
             <input type="text" />
           </div>
-          <div class="eight wide field ">
+          <div class="two wide field ">
             <label class="custom-label-w-22">ประเภทงบประมาณ</label>
-            <input class="int" type="text" />
+            </div>
+            <div class="five wide field ">
+            <input  type="text" />
           </div>
         </div>
 
@@ -112,7 +114,7 @@
           <td>330,000.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -135,7 +137,7 @@
           <td>16,506.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -158,7 +160,7 @@
           <td>14,600.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -181,7 +183,7 @@
           <td>39,420.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -204,7 +206,7 @@
           <td>106,720.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -227,7 +229,7 @@
           <td>30,720.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -250,7 +252,7 @@
           <td>10,000.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -273,7 +275,7 @@
           <td>11,250.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -296,7 +298,7 @@
           <td>33,750.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -319,7 +321,7 @@
           <td>157,680.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -342,7 +344,7 @@
           <td>90,000.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -365,7 +367,7 @@
           <td>50,000.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -388,7 +390,7 @@
           <td>2,700.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -411,7 +413,7 @@
           <td>312,000.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -434,7 +436,7 @@
           <td>1,363,800.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -457,7 +459,7 @@
           <td>94,710.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -480,7 +482,7 @@
           <td>72,930.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -503,7 +505,7 @@
           <td>40,938.60</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -526,7 +528,7 @@
           <td>5,279.30</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -549,7 +551,7 @@
           <td>730</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -572,7 +574,7 @@
           <td>73,904.00</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -595,7 +597,7 @@
           <td>9,263.72</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button"[routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -618,7 +620,7 @@
           <td>281.28</td>
           <td>&nbsp;</td>
           <td>
-              <button class="ui mini primary button" (click)="popupEditData()">
+              <button class="ui mini primary button" [routerLink]="[ '/int06/9/2'] ">
                 <i class="edit icon"></i>แก้ไข</button>
               
             </td>
@@ -641,116 +643,3 @@
 
 </div>
 
-<div id="int0699" class="ui modal small hidden transition">
-  <i class="close icon"></i>
-  <div class="header">
-      บันทึกรายการโอนเงิน
-  </div>
-
-  <div class="content">
-    <div class="ui grid">  
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>เอกสารอ้างอิง :</label>
-              </div>
-              <div class="one wide field ">
-                <label>ที่ กค</label>
-              </div>
-              <div class="three wide field">
-                <input type="text">
-              </div>
-              <div class="one wide field ">
-                <label>เลขที่</label>
-              </div>
-              <div class="three wide field">
-                <input type="text">
-              </div>
-              <div class="two wide field ">
-                <label>วันที่เอกสาร</label>
-              </div>
-              <div class="three wide field">
-                <input type="text">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>รายการโอนเงิน</label>
-              </div>
-              <div class="four wide field ">
-                <select class="ui dropdown ai">
-                  <option value="0">กรุณาเลือก</option>
-                </select>
-              </div>
-              <div class="one wide field ">
-                <label>ประเภทเงิน</label>
-              </div>
-              <div class="four wide field ">
-                <select class="ui dropdown ai">
-                  <option value="0">กรุณาเลือก</option>
-                </select>
-              </div>
-            </div>
-
-
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>ประเภทงบ</label>
-              </div>
-              <div class="four wide field ">
-                <select class="ui dropdown ai">
-                  <option value="0">กรุณาเลือก</option>
-                </select>
-              </div>
-              <div class="one wide field ">
-                <label>กิจกรรม</label>
-              </div>
-              <div class="four wide field ">
-                <select class="ui dropdown ai">
-                  <option value="0">กรุณาเลือก</option>
-                </select>
-              </div>
-            </div>
-
-
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>คำอธิบายรายการ</label>
-              </div>
-              <div class="nine wide field">
-                <input type="text">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>จำนวนเงิน</label>
-              </div>
-              <div class="four wide field">
-                <input type="text">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>หมายเหตุ</label>
-              </div>
-              <div class="nine wide field">
-                <textarea rows="6" cols="10"></textarea>
-              </div>
-            </div>
-            <div class="ui center aligned grid">
-              <div class="four wide column">
-                <button class="ui mini primary button" (click)="showdata()">
-                  <i class="add icon"></i>
-                  เพิ่ม
-                </button>             
-          </div>
-        </div>
