--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9-2/int06-9-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9-2/int06-9-2.component.html
@@ -1,3 +1,115 @@
-<p>
-  int06-9-2 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>แก้ไขบันทึกรายการโอนเงิน </span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>เอกสารอ้างอิง :</label>
+          </div>
+          <div class="one wide field ">
+            <label>ที่ กค</label>
+          </div>
+          <div class="three wide field">
+            <input type="text">
+          </div>
+          <div class="one wide field ">
+            <label>เลขที่</label>
+          </div>
+          <div class="three wide field">
+            <input type="text">
+          </div>
+          <div class="two wide field ">
+            <label>วันที่เอกสาร</label>
+          </div>
+          <div class="three wide field">
+            <input type="text">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>รายการโอนเงิน</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui dropdown ai">
+              <option value="0">กรุณาเลือก</option>
+            </select>
+          </div>
+          <div class="one wide field ">
+            <label>ประเภทเงิน</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui dropdown ai">
+              <option value="0">กรุณาเลือก</option>
+            </select>
+          </div>
+        </div>
+
+
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>ประเภทงบ</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui dropdown ai">
+              <option value="0">กรุณาเลือก</option>
+            </select>
+          </div>
+          <div class="one wide field ">
+            <label>กิจกรรม</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui dropdown ai">
+              <option value="0">กรุณาเลือก</option>
+            </select>
+          </div>
+        </div>
+
+
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>คำอธิบายรายการ</label>
+          </div>
+          <div class="nine wide field">
+            <input type="text">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>จำนวนเงิน</label>
+          </div>
+          <div class="four wide field">
+            <input type="text">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>หมายเหตุ</label>
+          </div>
+          <div class="nine wide field">
+            <textarea rows="6" cols="10"></textarea>
+          </div>
+        </div>
+
+        <div class="ui center aligned grid">
+          <div class="four wide column">
+            <button class="ui mini primary button" (click)="showdata()">
+              <i class="save icon"></i>
+              บันทึก
+            </button>
+
+          </div>
+        </div>
+      </div>
