add menu mockup

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -129,7 +129,7 @@
                     <a class="item " [routerLink]="[ '/int06/4'] " *ngIf="authService.renderByPage('int06/4')" routerLinkActive="active ">บันทึกข้อมูลเบิกจ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/5'] " *ngIf="authService.renderByPage('int06/5')" routerLinkActive="active ">บันทึกรายการคุมเช็ค</a>
                     <a class="item " [routerLink]="[ '/int06/6'] " *ngIf="authService.renderByPage('int06/6')" routerLinkActive="active ">บันทึกรายการคุม KTB-Corporate</a>
-                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('???')" routerLinkActive="active ">สร้างแบบขอเบิก</a>
+                    <a class="item " [routerLink]="[ '/int06/11'] " *ngIf="authService.renderByPage('int06/11')" routerLinkActive="active ">สร้างแบบขอเบิก</a>
                     <a class="item " [routerLink]="[ '/int06/7'] " *ngIf="authService.renderByPage('int06/7')"
                         routerLinkActive="active ">ตรวจการเบิกค่าสาธารณูปโภค</a>
                     <a class="item " [routerLink]="[ '/int06/8'] " *ngIf="authService.renderByPage('int06/8')"
