--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-1/int06-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-1/int06-6-1.component.html
@@ -1,356 +1,56 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <div class="ui large ordered steps" style="width: 280px;">
-      <div class=" step">
-        <div class="content">
-          <div class="title">ข้อมูล</div>
-          <div class="description"> เลขอ้างอิง (ฎีกา)</div>
-        </div>
-      </div>
-      <div class="active step">
-        <div class="content">
-          <div class="title">ข้อมูล</div>
-          <div class="description">เจ้าหน้าที่</div>
-        </div>
-      </div>
-      <div class=" step">
-        <div class="content">
-          <div class="title">ปฏิทินการเบิกค่าตอบแทน</div>
-          <div class="description">บุคคลหรือคณะกรรมการ
-          </div>
-        </div>
-      </div>
-      <div class=" step">
-        <div class="content">
-          <div class="title">กระดาษทำการตรวจสอบ</div>
-          <div class="description">การเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
-          </div>
-        </div>
-      </div>
-      <div class=" step">
-        <div class="content">
-          <div class="title"> เปรียบเทียบ</div>
-          <div class="description">สรุปรายการขอเบิก
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="ui top attached header">
-      <span>ข้อมูลเจ้าหน้าที่
-      </span>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>บันทึกรายการคุม KTB-Corporate </span>
     </div>
 
     <div class="ui attached segment">
       <div class="ui form">
-        <div class="ui segment">
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ชื่อ</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="กนกพรรณ ">
-
-            </div>
-            <div class="one wide field ">
-              <label>นามสกุล</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="เกตุสัตบรรณ">
-            </div>
-            <div class="two wide field ">
-              <label>ตำแหน่ง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ชำนาญการ">
-            </div>
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ผู้รับเงิน</label>
+            <input type="text" />
           </div>
-
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>ประเภท</label>
-              </div>
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency1" checked="checked">
-                  <label>ข้าราชการ</label>
-                </div>
-              </div>
-
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency1">
-                  <label>พนักงานราชการ</label>
-                </div>
-              </div>
-              <div class="two wide field  ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency1">
-                  <label>ลูกจ้างชั่วคราว</label>
-                </div>
-              </div>
-              <div class="one wide field "> </div>
-              <div class="two wide field ">
-                <label>อัตราเบี้ยเลี้ยง</label>
-              </div>
-              <div class="four wide field ">
-                <input type="text" placeholder="" value="260">
-              </div>
-            </div>
+          <div class="two wide field ">
+            <label class="custom-label-w-22">เลขที่บัญชี</label>
+          </div>
+          <div class="five wide field ">
+            <input type="text" />
           </div>
         </div>
-
-
-        <br>
-        <div class="ui segment">
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ชื่อ</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="ดลพร">
-            </div>
-            <div class="one wide field ">
-              <label>นามสกุล</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="แหวนวงษ์">
-            </div>
-            <div class="two wide field ">
-              <label>ตำแหน่ง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ปฏิบัติการ">
-            </div>
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">ประเภทค่าใช้จ่าย</label>
+            <input type="text" />
           </div>
-
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>ประเภท</label>
-              </div>
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency2" checked="checked">
-                  <label>ข้าราชการ</label>
-                </div>
-              </div>
-
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency2">
-                  <label>พนักงานราชการ</label>
-                </div>
-              </div>
-              <div class="two wide field  ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency2">
-                  <label>ลูกจ้างชั่วคราว</label>
-                </div>
-              </div>
-              <div class="one wide field "> </div>
-              <div class="two wide field ">
-                <label>อัตราเบี้ยเลี้ยง</label>
-              </div>
-              <div class="four wide field ">
-                <input type="text" placeholder="" value="260">
-              </div>
-            </div>
+          <div class="two wide field ">
+            <label class="custom-label-w-22">จำนวนเงิน</label>
+          </div>
+          <div class="five wide field ">
+            <input type="text" />
           </div>
         </div>
-        <br>
-        <div class="ui segment">
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ชื่อ</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="">
-            </div>
-            <div class="one wide field ">
-              <label>นามสกุล</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="">
-            </div>
-            <div class="two wide field ">
-              <label>ตำแหน่ง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ปฏิบัติการ">
-            </div>
-          </div>
-
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>ประเภท</label>
-              </div>
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency5" checked="checked">
-                  <label>ข้าราชการ</label>
-                </div>
-              </div>
-
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency5">
-                  <label>พนักงานราชการ</label>
-                </div>
-              </div>
-              <div class="two wide field  ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency5">
-                  <label>ลูกจ้างชั่วคราว</label>
-                </div>
-              </div>
-              <div class="one wide field "> </div>
-              <div class="two wide field ">
-                <label>อัตราเบี้ยเลี้ยง</label>
-              </div>
-              <div class="four wide field ">
-                <input type="text" placeholder="" value="260">
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="ui segment">
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ชื่อ</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="ธนธรณ์">
-            </div>
-            <div class="one wide field ">
-              <label>นามสกุล</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="วงศ์พิทักษ์">
-            </div>
-            <div class="two wide field ">
-              <label>ตำแหน่ง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ปฏิบัติการ">
-            </div>
-          </div>
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>ประเภท</label>
-              </div>
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency4" checked="checked">
-                  <label>ข้าราชการ</label>
-                </div>
-              </div>
-
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency4">
-                  <label>พนักงานราชการ</label>
-                </div>
-              </div>
-              <div class="two wide field  ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency4">
-                  <label>ลูกจ้างชั่วคราว</label>
-                </div>
-              </div>
-              <div class="one wide field "> </div>
-              <div class="two wide field ">
-                <label>อัตราเบี้ยเลี้ยง</label>
-              </div>
-              <div class="four wide field ">
-                <input type="text" placeholder="" value="260">
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="ui segment">
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ชื่อ</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นภสร">
-            </div>
-            <div class="one wide field ">
-              <label>นามสกุล</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="ศรีสงคราม ">
-            </div>
-            <div class="two wide field ">
-              <label>ตำแหน่ง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ปฏิบัติการ">
-            </div>
-          </div>
-
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="one wide field "></div>
-              <div class="two wide field ">
-                <label>ประเภท</label>
-              </div>
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency3" checked="checked">
-                  <label>ข้าราชการ</label>
-                </div>
-              </div>
-
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency3">
-                  <label>พนักงานราชการ</label>
-                </div>
-              </div>
-              <div class="two wide field  ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency3">
-                  <label>ลูกจ้างชั่วคราว</label>
-                </div>
-              </div>
-              <div class="one wide field "> </div>
-              <div class="two wide field ">
-                <label>อัตราเบี้ยเลี้ยง</label>
-              </div>
-              <div class="four wide field ">
-                <input type="text" placeholder="" value="260">
-              </div>
-            </div>
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">วันที่โอน</label>
+            <input type="text" />
           </div>
         </div>
       </div>
-      <br>
-
-
 
       <div class="ui center aligned grid">
-        <div class="eight wide column">
-          <button class="ui mini primary button" routerLink="/int06/6">
-            <i class="arrow left icon"></i>
-            ย้อนกลับ
+        <div class="six wide column">
+          <button class="ui mini primary button">
+            <i class="save icon"></i>
+            บันทึก
           </button>
-          <button class="ui mini primary button" routerLink="/int06/6/2">
-            <i class="arrow right icon"></i>
-            ถัดไป
+          <button class="ui   mini button">
+            <i class="close icon"></i>
+            ยกเลิก
           </button>
+
         </div>
       </div>
     </div>
   </div>
+</div>
